# cubesat_dev

./: CMakeCache.txt  README.md  build.ninja  compile_commands.json  readme.md
Core/Inc/: stm32f4xx_it.h
Core/Src/: main.c  stm32f4xx_hal_msp.c
cubesat_dev/: .mxproject  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  compile_commands.json  cubesat_dev.ioc
cubesat_dev/Core/Inc/: stm32f4xx_it.h
cubesat_dev/Core/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
cubesat_dev/cmake/: gcc-arm-none-eabi.cmake
cubesat_dev/cmake/stm32cubemx/: CMakeLists.txt  cmake_install.cmake
software/mainProject/: CMakeLists.txt  README.md  build.ninja  cmake_install.cmake  cubesat_dev.ioc  mainProject.ioc
software/mainProject/Core/Src/: main.c  stm32f4xx_it.c
software/mainProject/cubesat_dev/: .mxproject  CMakeCache.txt  CMakeLists.txt  stm32f446zetx_flash.ld
